import { describe, it, expect, vi, beforeEach, afterEach } from 'vitest'
import checkElement from './checkElement.js'
import type { InternalCheckElementMethodOptions } from './check.interfaces.js'
import type { WicElement } from './element.interfaces.js'

// Mock the dependencies
vi.mock('./checkAppElement.js', () => ({
    default: vi.fn().mockResolvedValue({
        fileName: 'test-app-element.png',
        misMatchPercentage: 0,
        isExactSameImage: true,
        isNewBaseline: false,
        isAboveTolerance: false,
    })
}))

vi.mock('./checkWebElement.js', () => ({
    default: vi.fn().mockResolvedValue({
        fileName: 'test-web-element.png',
        misMatchPercentage: 0,
        isExactSameImage: true,
        isNewBaseline: false,
        isAboveTolerance: false,
    })
}))

describe('checkElement', () => {
    let checkAppElementSpy: ReturnType<typeof vi.fn>
    let checkWebElementSpy: ReturnType<typeof vi.fn>

    const baseOptions: InternalCheckElementMethodOptions = {
        checkElementOptions: {
            wic: {
                addressBarShadowPadding: 6,
                autoElementScroll: true,
                addIOSBezelCorners: false,
                autoSaveBaseline: false,
                clearFolder: false,
                userBasedFullPageScreenshot: false,
                enableLegacyScreenshotMethod: false,
                formatImageName: '{tag}-{logName}-{width}x{height}-dpr-{dpr}',
                isHybridApp: false,
                savePerInstance: true,
                toolBarShadowPadding: 6,
                disableBlinkingCursor: false,
                disableCSSAnimation: false,
                enableLayoutTesting: false,
                fullPageScrollTimeout: 1500,
                hideScrollBars: true,
                waitForFontsLoaded: true,
                compareOptions: {
                    ignoreAlpha: false,
                    ignoreAntialiasing: false,
                    ignoreColors: false,
                    ignoreLess: false,
                    ignoreNothing: false,
                    rawMisMatchPercentage: false,
                    returnAllCompareData: false,
                    saveAboveTolerance: 0,
                    scaleImagesToSameSize: false,
                    blockOutSideBar: false,
                    blockOutStatusBar: false,
                    blockOutToolBar: false,
                    createJsonReportFiles: false,
                    diffPixelBoundingBoxProximity: 5,
                },
                tabbableOptions: {
                    circle: {
                        backgroundColor: 'rgba(255, 0, 0, 0.4)',
                        borderColor: 'rgba(255, 0, 0, 1)',
                        borderWidth: 1,
                        fontColor: 'rgba(0, 0, 0, 1)',
                        fontFamily: 'Arial',
                        fontSize: 10,
                        size: 10,
                    },
                    line: {
                        color: 'rgba(255, 0, 0, 1)',
                        width: 1,
                    },
                }
            },
            method: {}
        },
        browserInstance: { isAndroid: false } as any,
        element: { selector: '#test-element' } as WicElement,
        folders: {
            actualFolder: '/test/actual',
            baselineFolder: '/test/baseline',
            diffFolder: '/test/diff'
        },
        instanceData: {
            appName: 'TestApp',
            browserName: 'Chrome',
            browserVersion: '118.0.0.0',
            deviceName: 'iPhone 14',
            devicePixelRatio: 2,
            deviceRectangles: {
                bottomBar: { y: 800, x: 0, width: 390, height: 0 },
                homeBar: { x: 0, y: 780, width: 390, height: 34 },
                leftSidePadding: { y: 0, x: 0, width: 0, height: 0 },
                rightSidePadding: { y: 0, x: 0, width: 0, height: 0 },
                screenSize: { height: 844, width: 390 },
                statusBar: { x: 0, y: 0, width: 390, height: 47 },
                statusBarAndAddressBar: { y: 0, x: 0, width: 390, height: 47 },
                viewport: { y: 47, x: 0, width: 390, height: 733 }
            },
            initialDevicePixelRatio: 2,
            isAndroid: false,
            isIOS: true,
            isMobile: true,
            logName: 'test-log',
            name: 'test-device',
            nativeWebScreenshot: false,
            platformName: 'iOS',
            platformVersion: '17.0'
        },
        isNativeContext: true,
        tag: 'test-element',
        testContext: {
            commandName: 'checkElement',
            framework: 'vitest',
            parent: 'test suite',
            title: 'test title',
            tag: 'test-tag',
            instanceData: {
                browser: { name: 'Chrome', version: '118.0.0.0' },
                deviceName: 'iPhone 14',
                platform: { name: 'iOS', version: '17.0' },
                app: 'TestApp',
                isMobile: true,
                isAndroid: false,
                isIOS: true
            }
        }
    }

    beforeEach(async () => {
        const checkAppElement = (await import('./checkAppElement.js')).default
        const checkWebElement = (await import('./checkWebElement.js')).default

        checkAppElementSpy = vi.mocked(checkAppElement)
        checkWebElementSpy = vi.mocked(checkWebElement)
    })

    afterEach(() => {
        vi.clearAllMocks()
    })

    it('should call checkAppElement when isNativeContext is true', async () => {
        const result = await checkElement(baseOptions)

        expect(result).toMatchSnapshot()
        expect(checkAppElementSpy).toHaveBeenCalledWith(baseOptions)
        expect(checkWebElementSpy).not.toHaveBeenCalled()
    })

    it('should call checkWebElement', async () => {
        const options = {
            ...baseOptions,
            isNativeContext: false
        }

        const result = await checkElement(options)

        expect(result).toMatchSnapshot()
        expect(checkWebElementSpy).toHaveBeenCalledWith({
            ...options,
            isNativeContext: undefined
        })
        expect(checkAppElementSpy).not.toHaveBeenCalled()
    })
})
